# CityuGE2260Calculator

./: .gitignore  LICENSE  README.md  README_EN.md  clear_database.py  clear_db.bat  clear_db.ps1  main.py  pyproject.toml  quick_clear.py  requirements.txt  run.bat  run.ps1
order/20260125/: Trade Order Form.xlsx
src/: __init__.py
src/analyse/: __init__.py  plotter.py
src/parser/: __init__.py  excel_parser.py
src/storage/: __init__.py  db_manager.py  models.py
src/strategy/: __init__.py  multi_batch_strat.py
